--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pyspark = "^3.4.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "7.3.1"
+flake8 = "6.0.0"
 
 [build-system]
 requires = ["poetry-core"]
